--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
     <form id="formulario"
       action="https://script.google.com/macros/s/AKfycbz0VyCHbE7Sl3TkJ3a3FNqd2DX52DbP1JFi8mf5Zn4mRtbW7ZteCsUCW0GLP0BKWf0c/exec"
       method="POST">
-      <!-- Campo ID automático -->
       <input type="hidden" name="idpermiso" id="idpermiso" value="">
-
       <label for="nombre">Nombre y Apellido</label>
       <input type="text" id="nombre" name="nombre" required>
 
@@ -30,6 +28,11 @@
       <input type="date" id="fecha_permiso2" name="fecha_permiso2">
 
       <input type="hidden" name="fecha_solicitud" id="fecha_solicitud" value="">
+
+      <!-- Barra de progreso -->
+      <div id="progress-container" class="progress-container">
+        <div id="progress-bar" class="progress-bar"></div>
+      </div>
 
       <input type="submit" value="Enviar Datos">
     </form>
