--- a/index.html
+++ b/index.html
@@ -19,7 +19,45 @@
       <input type="text" id="nombre" name="nombre" required>
 
       <label for="empresa">Empresa</label>
-      <input type="text" id="empresa" name="empresa" required>
+<select id="empresa" name="empresa" required>
+    <option value="AESA">AESA</option>
+    <option value="ASHIRA MYM CABA">ASHIRA MYM CABA</option>
+    <option value="CHAMICAL">CHAMICAL</option>
+    <option value="CLIBA CABA">CLIBA CABA</option>
+    <option value="CLIBA SAN ISIDRO">CLIBA SAN ISIDRO</option>
+    <option value="CONT.HUGO">CONT.HUGO</option>
+    <option value="COOP GEST LDTA MORENO">COOP GEST LDTA MORENO</option>
+    <option value="COOP.GEST.LTDA CABA">COOP.GEST.LTDA CABA</option>
+    <option value="COVELIA LANUS">COVELIA LANUS</option>
+    <option value="COVELIA Lomas">COVELIA Lomas</option>
+    <option value="COVELIA San Martin">COVELIA San Martin</option>
+    <option value="DAKOTA">DAKOTA</option>
+    <option value="DELTACOM">DELTACOM</option>
+    <option value="DORINKA">DORINKA</option>
+    <option value="ECOCIUDAD">ECOCIUDAD</option>
+    <option value="FARMACITY">FARMACITY</option>
+    <option value="HESURMET">HESURMET</option>
+    <option value="LOGISU">LOGISU</option>
+    <option value="LUSA">LUSA</option>
+    <option value="MACROSER">MACROSER</option>
+    <option value="MARTIN Y MARTIN SAN JUSTO">MARTIN Y MARTIN SAN JUSTO</option>
+    <option value="NITTIDA">NITTIDA</option>
+    <option value="OCA LOG">OCA LOG</option>
+    <option value="OLIVOS TIGRE">OLIVOS TIGRE</option>
+    <option value="REMOLQUES Y SERVICIOS">REMOLQUES Y SERVICIOS</option>
+    <option value="RINKEL TRAIL">RINKEL TRAIL</option>
+    <option value="SANTA ELENA">SANTA ELENA</option>
+    <option value="SBASE">SBASE</option>
+    <option value="SERTEC">SERTEC</option>
+    <option value="SERVECO">SERVECO</option>
+    <option value="SERVICIO LUCIO">SERVICIO LUCIO</option>
+    <option value="SOLBAYRES">SOLBAYRES</option>
+    <option value="SUPLYCHAY LOGISTICA">SUPLYCHAY LOGISTICA</option>
+    <option value="TTE OLIVOS MARTELLI">TTE OLIVOS MARTELLI</option>
+    <option value="URBASER">URBASER</option>
+    <option value="URBASUR">URBASUR</option>
+</select>
+
 
       <label for="fecha_permiso">Fecha de Permiso</label>
       <input type="date" id="fecha_permiso" name="fecha_permiso" required>
