--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
       <label for="empresa">Empresa</label>
 <select id="empresa" name="empresa" required>
+    <option value="">Selecciona la empresa.....</option>
     <option value="AESA">AESA</option>
     <option value="ASHIRA MYM CABA">ASHIRA MYM CABA</option>
     <option value="CHAMICAL">CHAMICAL</option>
