--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <div class="form-container">
-    <h1>Formulario de Envío</h1>
+    <h1>Permisos gremiales</h1>
     <form id="formulario"
       action="https://script.google.com/macros/s/AKfycbz0VyCHbE7Sl3TkJ3a3FNqd2DX52DbP1JFi8mf5Zn4mRtbW7ZteCsUCW0GLP0BKWf0c/exec"
       method="POST">
