--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Permisos gremiales</title>
-  <link rel="stylesheet" href="./styles.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -15,50 +15,51 @@
       action="https://script.google.com/macros/s/AKfycbz0VyCHbE7Sl3TkJ3a3FNqd2DX52DbP1JFi8mf5Zn4mRtbW7ZteCsUCW0GLP0BKWf0c/exec"
       method="POST">
       <input type="hidden" name="idpermiso" id="idpermiso" value="">
+
       <label for="nombre">Nombre y Apellido</label>
       <input type="text" id="nombre" name="nombre" required>
 
       <label for="empresa">Empresa</label>
-<select id="empresa" name="empresa" required>
-    <option value="">Selecciona la empresa.....</option>
-    <option value="AESA">AESA</option>
-    <option value="ASHIRA MYM CABA">ASHIRA MYM CABA</option>
-    <option value="CHAMICAL">CHAMICAL</option>
-    <option value="CLIBA CABA">CLIBA CABA</option>
-    <option value="CLIBA SAN ISIDRO">CLIBA SAN ISIDRO</option>
-    <option value="CONT.HUGO">CONT.HUGO</option>
-    <option value="COOP GEST LDTA MORENO">COOP GEST LDTA MORENO</option>
-    <option value="COOP.GEST.LTDA CABA">COOP.GEST.LTDA CABA</option>
-    <option value="COVELIA LANUS">COVELIA LANUS</option>
-    <option value="COVELIA Lomas">COVELIA Lomas</option>
-    <option value="COVELIA San Martin">COVELIA San Martin</option>
-    <option value="DAKOTA">DAKOTA</option>
-    <option value="DELTACOM">DELTACOM</option>
-    <option value="DORINKA">DORINKA</option>
-    <option value="ECOCIUDAD">ECOCIUDAD</option>
-    <option value="FARMACITY">FARMACITY</option>
-    <option value="HESURMET">HESURMET</option>
-    <option value="LOGISU">LOGISU</option>
-    <option value="LUSA">LUSA</option>
-    <option value="MACROSER">MACROSER</option>
-    <option value="MARTIN Y MARTIN SAN JUSTO">MARTIN Y MARTIN SAN JUSTO</option>
-    <option value="NITTIDA">NITTIDA</option>
-    <option value="OCA LOG">OCA LOG</option>
-    <option value="OLIVOS TIGRE">OLIVOS TIGRE</option>
-    <option value="REMOLQUES Y SERVICIOS">REMOLQUES Y SERVICIOS</option>
-    <option value="RINKEL TRAIL">RINKEL TRAIL</option>
-    <option value="SANTA ELENA">SANTA ELENA</option>
-    <option value="SBASE">SBASE</option>
-    <option value="SERTEC">SERTEC</option>
-    <option value="SERVECO">SERVECO</option>
-    <option value="SERVICIO LUCIO">SERVICIO LUCIO</option>
-    <option value="SOLBAYRES">SOLBAYRES</option>
-    <option value="SUPLYCHAY LOGISTICA">SUPLYCHAY LOGISTICA</option>
-    <option value="TTE OLIVOS MARTELLI">TTE OLIVOS MARTELLI</option>
-    <option value="URBASER">URBASER</option>
-    <option value="URBASUR">URBASUR</option>
-</select>
+      <select id="empresa" name="empresa" required>
+        <option value="">Selecciona la empresa.....</option>
 
+        <option value="AESA">AESA</option>
+        <option value="ASHIRA MYM CABA">ASHIRA MYM CABA</option>
+        <option value="CHAMICAL">CHAMICAL</option>
+        <option value="CLIBA CABA">CLIBA CABA</option>
+        <option value="CLIBA SAN ISIDRO">CLIBA SAN ISIDRO</option>
+        <option value="CONT.HUGO">CONT.HUGO</option>
+        <option value="COOP GEST LDTA MORENO">COOP GEST LDTA MORENO</option>
+        <option value="COOP.GEST.LTDA CABA">COOP.GEST.LTDA CABA</option>
+        <option value="COVELIA LANUS">COVELIA LANUS</option>
+        <option value="COVELIA Lomas">COVELIA Lomas</option>
+        <option value="COVELIA San Martin">COVELIA San Martin</option>
+        <option value="DAKOTA">DAKOTA</option>
+        <option value="DELTACOM">DELTACOM</option>
+        <option value="DORINKA">DORINKA</option>
+        <option value="ECOCIUDAD">ECOCIUDAD</option>
+        <option value="FARMACITY">FARMACITY</option>
+        <option value="HESURMET">HESURMET</option>
+        <option value="LOGISU">LOGISU</option>
+        <option value="LUSA">LUSA</option>
+        <option value="MACROSER">MACROSER</option>
+        <option value="MARTIN Y MARTIN SAN JUSTO">MARTIN Y MARTIN SAN JUSTO</option>
+        <option value="NITTIDA">NITTIDA</option>
+        <option value="OCA LOG">OCA LOG</option>
+        <option value="OLIVOS TIGRE">OLIVOS TIGRE</option>
+        <option value="REMOLQUES Y SERVICIOS">REMOLQUES Y SERVICIOS</option>
+        <option value="RINKEL TRAIL">RINKEL TRAIL</option>
+        <option value="SANTA ELENA">SANTA ELENA</option>
+        <option value="SBASE">SBASE</option>
+        <option value="SERTEC">SERTEC</option>
+        <option value="SERVECO">SERVECO</option>
+        <option value="SERVICIO LUCIO">SERVICIO LUCIO</option>
+        <option value="SOLBAYRES">SOLBAYRES</option>
+        <option value="SUPLYCHAY LOGISTICA">SUPLYCHAY LOGISTICA</option>
+        <option value="TTE OLIVOS MARTELLI">TTE OLIVOS MARTELLI</option>
+        <option value="URBASER">URBASER</option>
+        <option value="URBASUR">URBASUR</option>
+      </select>
 
       <label for="fecha_permiso">Fecha de Permiso</label>
       <input type="date" id="fecha_permiso" name="fecha_permiso" required>
