--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <option value="SANTA ELENA">SANTA ELENA</option>
         <option value="SBASE">SBASE</option>
         <option value="SERTEC">SERTEC</option>
-        <option value="SERVECO">SERVECO</option>
+        <option value="SERBECO">SERBECO</option>
         <option value="SERVICIO LUCIO">SERVICIO LUCIO</option>
         <option value="SOLBAYRES">SOLBAYRES</option>
         <option value="SUPLYCHAY LOGISTICA">SUPLYCHAY LOGISTICA</option>
